--- a/Lab1/lab1 - bootstrap.html
+++ b/Lab1/lab1 - bootstrap.html
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="cssootstrap.min.css">
-    <link rel="stylesheet" href="cssootstrap-theme.min.css">
-    <script src="jsquery-3.2.1.min.js"></script>
-    <script src="jsootstrap.min.js"></script>
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/bootstrap-theme.min.css">
+    <script src="./js/jquery-3.2.1.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
     <title>Lab 1</title>
 </head>
 <body>
@@ -36,10 +36,10 @@
             </div>
         </div>
     </nav>
-            <div class="container-fluid" style="padding:0">
-                <div class="jumbotron">
+            <div class="">
+                    <div class="jumbotron">
                     <h1>My Awesome Lab for Bootstrap!</h1>
-                    <p>This is my first lab with bootstrap.</p>
+                    <p>This is my first lab with bootstrap, so this is very basic.</p>
                 </div>
             </div>
     <div class="row">
